--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -19,10 +19,12 @@ $font-family: 'Lora', serif;
 
   .ham {
     margin-left: 10px;
+    cursor: grab;
   }
 
   .profile {
     margin-right: 10px;
+    cursor: grab;
   }
 }
 
