--- a/src/Components/RecipeCard/RecipeCard.scss
+++ b/src/Components/RecipeCard/RecipeCard.scss
@@ -6,17 +6,17 @@
     border-radius: 0.25;
 
    .card-contents {
-    
+    border: 2px solid black;
 
         .image {
         float: center;
         object-fit: contain;
         margin-left: 42%;
+        cursor: zoom-in;
         }
         .desc-contents {
         border: 0.5px solid black;
         margin: 10px;
-        background-color: transparent;
         padding: 10px;
         }
    }
