--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap');
 
 $font-family: 'Lora', serif;
-
+ * {
+    background-color: white;
+ }
 
 .navbar-container {
   .navbar {
