--- a/src/Components/RecipeCard/RecipeCard.scss
+++ b/src/Components/RecipeCard/RecipeCard.scss
@@ -6,16 +6,17 @@
     border-radius: 0.25;
 
    .card-contents {
-    border: 2px solid black;
+   
 
         .image {
         float: center;
         object-fit: contain;
-        margin-left: 42%;
+        margin-left: 46%;
         cursor: zoom-in;
         }
+
         .desc-contents {
-        border: 0.5px solid black;
+        border: 0.5px solid green;
         margin: 10px;
         padding: 10px;
         }
@@ -24,5 +25,9 @@
             display: flex;
             justify-content: center;
             align-items: center;
+        }
+        p {
+            text-align: center;
+            line-height: 150%;
         }
 }
