--- a/src/Containers/FeatureRecipe/FeatureRecipe.scss
+++ b/src/Containers/FeatureRecipe/FeatureRecipe.scss
@@ -1,14 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
+@use "../../assets/variables" as *;
 
-$title-family: 'Lora', serif;
-$para-family: 'Lora', serif;
-$background-color: whitesmoke;
 
 * {
     margin: 2px;
     padding: 1px;
-    background-color: $background-color;
 }
 
 
@@ -21,10 +16,10 @@ $background-color: whitesmoke;
         h1 {
             display: flex;
             justify-content: center;
-            font-family: $title-family;
+            font-family: $font-family;
         }
         p {
-            font-family: $para-family;
+            font-family: $font-family;
         }
 }
 
@@ -45,18 +40,19 @@ button {
     border-radius: 2px;
     padding-left: 3px;
     padding-right: 3px;
-    box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, .1) 0 2px 0px;
+    box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, 1) 0 2px 0px;
     box-sizing: border-box;
     color: #121212;
     flex: 1 1 auto;
     font-size: 0.8rem;
     font-weight: 600;
     line-height: 1.3;
-    transition: box-shadow .2s, -webkit-box-shadow .2s;
+    transition: box-shadow .2s;
     white-space: nowrap;
     border: 0;
 }
 
 button:hover {
-    box-shadow: #121212 0 0 0 1px;
+    filter: brightness(80%);
+    cursor: grab;
 }
