--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -4,15 +4,16 @@
 .navbar-container {
   .navbar {
     font-family: $font-family;
-    border-bottom: solid rgb(191, 223, 191);
+    border-bottom: 2px solid $darker-blue;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     margin: 10;
     margin-top: 10px;
+    margin-bottom: 20px;
     padding: 10;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
   }
 
   .ham {
@@ -24,6 +25,10 @@
     margin-right: 10px;
     cursor: grab;
   }
+}
+
+.small-link:hover {
+  filter: brightness(100%);
 }
 
 @media screen and (min-width: 992px) {
