--- a/src/Containers/FeatureRecipe/FeatureRecipe.scss
+++ b/src/Containers/FeatureRecipe/FeatureRecipe.scss
@@ -2,32 +2,32 @@
 
 
 * {
-    margin: 2px;
+    margin: 10px;
     padding: 1px;
 }
 
 
 .recipe-card-container {
-    margin: 5px;
     padding: 5px;
     width: 100%;
     margin-bottom: 40px;
+    border: 3px solid $darker-blue;
+    background-color: $card-background;
 
         h1 {
             display: flex;
             justify-content: center;
             font-family: $font-family;
+            background-color: $card-background;
         }
         p {
             font-family: $font-family;
+            background-color: $card-background;
         }
-}
 
-.card:hover {
-    filter: brightness(120%);
-    box-shadow: 7px 8px 5px 0px rgba(191,223,191,0.77);
-    -webkit-box-shadow: 7px 8px 5px 0px rgba(191,223,191,0.77);
-    -moz-box-shadow: 7px 8px 5px 0px rgba(191,223,191,0.77);;
+        .card {
+            background-color: $card-background;
+        }
 }
 
 button {
@@ -35,15 +35,17 @@ button {
     justify-content: center;
     align-items: center;
     margin-left: 45%;
+    margin-right: 45%;
     margin-bottom: 10px;
     background-color: #fff;
     border-radius: 2px;
-    padding-left: 3px;
-    padding-right: 3px;
+    padding-left: 20px;
+    padding-right: 20px;
     box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, 1) 0 2px 0px;
     box-sizing: border-box;
     color: #121212;
     flex: 1 1 auto;
+    font-family: $font-family;
     font-size: 0.8rem;
     font-weight: 600;
     line-height: 1.3;
@@ -53,6 +55,5 @@ button {
 }
 
 button:hover {
-    filter: brightness(80%);
     cursor: grab;
 }
