--- a/src/Containers/PopularRecipes/PopularRecipes.scss
+++ b/src/Containers/PopularRecipes/PopularRecipes.scss
@@ -3,19 +3,16 @@
 
 .main {
     font-family: $font-family;
+    background-color: $card-background;
 }
 
-.main:hover {
-    filter: brightness(120%);
-    box-shadow: 3px -10px 5px 0px rgba(191,223,191,0.77);
-    -webkit-box-shadow: 3px -10px 5px 0px rgba(191,223,191,0.77);
-    -moz-box-shadow: 3px -10px 5px 0px rgba(191,223,191,0.77);
-}
+
 h1 {
     text-align: center;
     margin: 10px;
     padding: 10px;
     font-family: $font-family;
+    background-color: $card-background;
 }
 
 .grid-container {
@@ -23,4 +20,5 @@ h1 {
     display: grid;
     grid-template-columns: auto auto auto;
     gap: 2px;
+    background-color: $card-background;
 }
