--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -2,5 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 
 $font-family: 'Lora', serif;
-$background-color: whitesmoke;
+$background-color:	rgb(240,240,240);
+$card-background: rgba(169, 198, 199, 0.95);
 $soft-green: rgba(191,223,191,0.77);
+$lighter-blue: rgba(37, 150, 190);
+$darker-blue: rgba(26, 105, 133, 1);
+$dark-orange: rgba(190, 77, 37, 1);
