--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -1,3 +1,5 @@
+@use "../../assets/_variables.scss" as *;
+
 /* Position and sizing of burger button */
 .bm-burger-button {
 	position: fixed;
@@ -14,7 +16,7 @@
 
 /* Color/shape of burger icon bars on hover*/
 .bm-burger-bars-hover {
-	background: #a90000;
+	background: $dark-orange;
 }
 
 /* Position and sizing of clickable cross button */
