--- a/src/Components/ProfileButton/ProfileButton.scss
+++ b/src/Components/ProfileButton/ProfileButton.scss
@@ -16,27 +16,48 @@ body {
         height: 500px;
         overflow: auto;
       }
-  
-      #circle-avatar {
-        margin-top: 80px;
-        margin-left: 200px;
-        display: grid;
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        background-color: rgba(255,189,47,255);
-        place-items: center;
-  
         span {
-          font-size: 48px;
+          font-size: 20px;
           font-weight: bold;
           color: white;
         }
-      }
+
+        #nology-recipes-login {
+            display: flex;
+            justify-content: center;
+            margin-top: 60px;
+            font-size: 28px;
+        }
+
+        #user-profile-login {
+            display: flex;
+            justify-content: center;
+            margin: 10px;
+            margin-bottom: 70px;
+        }
+        
       p, 
       h5 {
         color: white;
         text-align: center;
+    }
+
+    .input-boxes-container {
+        display: flex;
+        flex-direction: column;
+
+        .input-box {
+            margin-left: 100px;
+            margin-right: 100px;
+            margin-bottom: 10px;
+        }
+
+        span {
+            margin-bottom: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     }
     }
   }
