--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -7,4 +7,5 @@ $card-background: rgba(230, 238, 238, 1);
 $soft-green: rgba(191,223,191,0.77);
 $lighter-blue: rgba(37, 150, 190);
 $darker-blue: rgba(26, 105, 133, 1);
+$menu-blue: rgba(56,58,71,255);
 $dark-orange: rgba(205, 112, 80, 1);
