--- a/src/Components/ProfileButton/ProfileButton.scss
+++ b/src/Components/ProfileButton/ProfileButton.scss
@@ -1,64 +1,92 @@
+@use "../../assets//variables" as *;
 
-body {
-    padding: 20px;
-    
-    #app {
-      border-radius: 4px;
-      padding: 20px;
-  
-      .card {
-        box-shadow: -200px 2px 0px 200px rgba(0,0,0,0.39);
-        -webkit-box-shadow: -400px 2px 0px 600px rgba(0,0,0,0.39);
-        -moz-box-shadow: -200px 2px 0px 200px rgba(0,0,0,0.39); 
-        margin-top: 28px;
-        background-color: rgba(56,58,71,255);
-        width: 500px;
-        height: 500px;
-        overflow: auto;
-      }
-        span {
-          font-size: 20px;
-          font-weight: bold;
-          color: white;
-        }
 
-        #nology-recipes-login {
-            display: flex;
-            justify-content: center;
-            margin-top: 60px;
-            font-size: 28px;
-        }
-
-        #user-profile-login {
-            display: flex;
-            justify-content: center;
-            margin: 10px;
-            margin-bottom: 70px;
-        }
-        
-      p, 
-      h5 {
-        color: white;
-        text-align: center;
+    hr {
+      border: 1px solid white;
     }
+    
+    .login-menu {
+        background-color: $menu-blue;
+        width: 30%;
+        position: fixed;
+        top: 0;
+        left: 1;
+        right: 0;
+        bottom: 0;
+        z-index: 0.5;
+      }
 
-    .input-boxes-container {
+      .login-menu-content {
+        height: 80%;
         display: flex;
         flex-direction: column;
-
-        .input-box {
-            margin-left: 100px;
-            margin-right: 100px;
-            margin-bottom: 10px;
-        }
+        justify-content: center;
+        align-items: center;
 
         span {
-            margin-bottom: 5px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+          margin: 10px;
         }
-    }
-    }
-  }
-  
+      }
+      .last-name {
+        text-align: center;
+        margin-bottom: 5px;
+      }
+
+      .first-name {
+          text-align: center;
+          margin-bottom: 5px;
+        }
+      .email-input {
+        text-align: center;
+        margin-bottom: 5px;
+      }
+      #nology-recipes-login {
+          font-size: 30px;
+          color: white;
+      }
+
+      #user-profile-login {
+        font-size: 20px;
+        margin-top: 10px;
+        color: white;
+      }
+
+      .login-menu-cross {
+        max-width: 35px;
+        margin-right: 200px;
+        margin-bottom: 50px;
+
+        :hover {
+          cursor: grab;
+        }
+      }
+
+      .login-menu-title {
+        color: white;
+        font-size: 30px;
+      }
+    
+      .login-menu-form {
+        display: flex;
+        flex-direction: column;
+        font-size: 20px;
+        color: white;
+        justify-items: center;
+      }
+    
+      .login-menu-input {
+        color: $menu-blue;
+    
+        &:focus {
+          outline: none;
+         
+        }
+      }
+
+      .submit-button-profile {
+        margin-top: 10px;
+        margin-right: 10px;
+        padding: 2px;
+      }
+    
+     
