--- a/src/Components/ProfileButton/ProfileButton.scss
+++ b/src/Components/ProfileButton/ProfileButton.scss
@@ -17,7 +17,7 @@
       }
 
       .login-menu-content {
-        height: 80%;
+        height: 90%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -63,7 +63,8 @@
 
       .login-menu-title {
         color: white;
-        font-size: 30px;
+        font-size: 20px;
+        margin-left: 10px;
       }
     
       .login-menu-form {
@@ -72,6 +73,7 @@
         font-size: 20px;
         color: white;
         justify-items: center;
+        
       }
     
       .login-menu-input {
